--- a/landing-page/assets/css/style.css
+++ b/landing-page/assets/css/style.css
@@ -3,6 +3,7 @@
 :root{
   --primary-color: #0A1128;
   --white-color: #fff;
+  --gap: 3rem;
 }
 
 *{
@@ -71,6 +72,7 @@ h6{
 .main-content{
   max-width: 1200px;
   margin: 0 auto;
+  padding: var(--gap);
 }
 
 .section{
